[iOS] user caption preferences not applied https://bugs.webkit.org/show_bug.cgi?id=134599

Reviewed by Sam Weinig.

* page/CaptionUserPreferences.cpp:
(WebCore::CaptionUserPreferences::updateCaptionStyleSheetOveride): All Pages in a PageGroup
do not necessarily use the same PageUserContentController, so apply and remove caption user
the style sheet directly to each page rather than to the page group.


Canonical link: https://commits.webkit.org/152697@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@170908 268f45cc-cd09-0410-ab3c-d52691b4dbfc